[package]
name = "proto-lab"
version = "0.1.3"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lighweight network simulator to build / test network protocols"
readme = "README.md"
repository = "https://github.com/boshtannik/network_simulator/"
keywords = ["protocol", "network", "emulator"]
categories = ["network-programming"]

[dependencies]
embedded-io = "0.6.1"
embedded-nano-mesh = "2.1.7"
